Fixed COVID page on mobile devices

--- a/cirillos/static/styles/covid.css
+++ b/cirillos/static/styles/covid.css
@@ -7,7 +7,7 @@ main {
 }
 
 .header h1 {
-	font-size: 80px;
+	font-size: 400%;
 	font-weight: 400;
 	color: #293546;
 }
@@ -19,7 +19,7 @@ main {
 }
 
 .header h3 {
-	font-size: 20px;
+	font-size: 150%;
 	font-weight: 200;
 	color: #293546;
 }
